--- a/04_prompt/01_Fewshot.ipynb
+++ b/04_prompt/01_Fewshot.ipynb
@@ -575,6 +575,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MaxMarginalrelevanceexample(mmr알고리즘)\n",
+    "* 정보검색과 문서 요약과정에 다양성과 관련성을 모두 고려하여 선택하는 알고리즘\n",
+    "* 결과의 중복성을 줄이면서도, 관련성이 높은 정보를 제공해준다"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -588,7 +597,7 @@
     }
    ],
    "source": [
-    "from langchain_core.example_selectors import SemanticSimilarityExampleSelector\n",
+    "from langchain_core.example_selectors import SemanticSimilarityExampleSelector, MaxMarginalRelevanceExampleSelector\n",
     "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain_chroma import Chroma\n",
     "\n",
@@ -619,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
