--- a/05_output_parser/01_pydantic-output-parser.ipynb
+++ b/05_output_parser/01_pydantic-output-parser.ipynb
@@ -233,10 +233,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "박지영\n",
+      "jiyoung.park@techsolutions.kr\n",
+      "AI 솔루션 도입 제안 및 컨설팅 미팅 요청\n",
+      "테크솔루션즈의 박지영 이사가 김민수 부장님께 AI 기반 비즈니스 솔루션 도입을 제안하며, 데이터 분석, 자동화 시스템, 예측 모델링 분야의 혁신적인 솔루션을 소개하고자 합니다. 이를 위해 3월 20일 오후 2시에 미팅을 제안드립니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pydanticoutputparser의 parse()를 통해 결과를 파싱한다\n",
+    "structured_output = parser.parse(response.content)\n",
+    "\n",
+    "print(structured_output.person)\n",
+    "print(structured_output.email)\n",
+    "print(structured_output.subject)\n",
+    "print(structured_output.summary)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "parser가 추가된 체인으로도 pydantic객체로 만들 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person='박지영' email='jiyoung.park@techsolutions.kr' subject='AI 솔루션 도입 제안 및 컨설팅 미팅 요청' summary='테크솔루션즈의 박지영 이사가 김민수 부장님에게 AI 기반 비즈니스 솔루션을 제안하며, 데이터 분석, 자동화 시스템, 예측 모델링 분야의 혁신적인 솔루션을 소개하고자 합니다. 3월 20일 오후 2시에 미팅을 제안드립니다.' date='3월 20일 오후 2시'\n"
+     ]
+    }
+   ],
+   "source": [
+    "#출력파서를 추가해 전체 체인을 구성\n",
+    "chain = prompt | llm | parser\n",
+    "\n",
+    "#chain을 실행하고 결과를 출력\n",
+    "response = chain.invoke(\n",
+    "    {\n",
+    "        \"email_conversation\" :email_conversation,\n",
+    "        \"question\" : \"이메일 내용중 중요한 내용을 추출해 주세요\"\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "#emailsummary 객체 형태로 출력되는것을 볼수있다\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### with_structured_output(pydantic)\n",
+    "* 모델을 정의할때 뒤에 출력파서를 추가하면 출력을 pydantic객체로 변환 할수있다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_with_structured = ChatOpenAI(\n",
+    "    temperature=0,\n",
+    "    model=\"gpt-4o\"\n",
+    ").with_structured_output(EmailSummary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person='박지영' email='jiyoung.park@techsolutions.kr' subject='AI 솔루션 도입 제안 및 컨설팅 미팅 요청' summary='테크솔루션즈의 박지영 이사가 김민수 부장님께 AI 기반 비즈니스 솔루션 도입을 제안하며, 데이터 분석, 자동화 시스템, 예측 모델링 분야의 혁신적인 솔루션을 소개하고자 합니다. 이를 위해 3월 20일 오후 2시에 미팅을 요청드립니다.' date='3월 20일 오후 2시'\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = llm_with_structured.invoke(email_conversation)\n",
+    "\n",
+    "print(answer)"
+   ]
   }
  ],
  "metadata": {
