--- a/07_textSplitter/03_token-text-splitter.ipynb
+++ b/07_textSplitter/03_token-text-splitter.ipynb
@@ -324,10 +324,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting transformers\n",
+      "  Downloading transformers-4.46.1-py3-none-any.whl.metadata (44 kB)\n",
+      "Requirement already satisfied: filelock in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from transformers) (3.16.1)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.23.2 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from transformers) (0.26.2)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from transformers) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from transformers) (24.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from transformers) (6.0.2)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from transformers) (2024.9.11)\n",
+      "Requirement already satisfied: requests in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from transformers) (2.32.3)\n",
+      "Collecting safetensors>=0.4.1 (from transformers)\n",
+      "  Downloading safetensors-0.4.5-cp311-none-win_amd64.whl.metadata (3.9 kB)\n",
+      "Requirement already satisfied: tokenizers<0.21,>=0.20 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from transformers) (0.20.1)\n",
+      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from transformers) (4.66.5)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (2024.10.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (4.12.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from requests->transformers) (3.4.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from requests->transformers) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from requests->transformers) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\20109\\miniforge3\\envs\\langchain_env\\lib\\site-packages (from requests->transformers) (2024.8.30)\n",
+      "Downloading transformers-4.46.1-py3-none-any.whl (10.0 MB)\n",
+      "   ---------------------------------------- 0.0/10.0 MB ? eta -:--:--\n",
+      "   ------------------ --------------------- 4.7/10.0 MB 23.7 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 8.9/10.0 MB 22.1 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 10.0/10.0 MB 16.9 MB/s eta 0:00:00\n",
+      "Downloading safetensors-0.4.5-cp311-none-win_amd64.whl (285 kB)\n",
+      "Installing collected packages: safetensors, transformers\n",
+      "Successfully installed safetensors-0.4.5 transformers-4.46.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install transformers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### hugging face tokenizer\n",
+    "* 다양한 토크나이저를 제공한다\n",
+    "* gpt2tokenizerfase\n",
+    "\n",
+    "텍스트분할방식 : 전달된 문자 단위<br>\n",
+    "청크 크기 측정방식 :huggingface토크나이저에 의해 계산된 토큰수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a716c3a6dc894826a8e94b3f74c6fd6e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/26.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\20109\\miniforge3\\envs\\langchain_env\\Lib\\site-packages\\huggingface_hub\\file_download.py:139: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\20109\\.cache\\huggingface\\hub\\models--gpt2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "78215ae801144f2f953b18ca3e23dad6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json:   0%|          | 0.00/1.04M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f084d14c7e2546c594f6c1b53225fa44",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9ad324855c064709942c4e70bc7151ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/1.36M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c83123f26c824b5bbb103054c5824c34",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/665 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from transformers import GPT2TokenizerFast\n",
+    "\n",
+    "# gpt-2 모델의 토크나이저\n",
+    "hf_tokenizer = GPT2TokenizerFast.from_pretrained(\"gpt2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created a chunk of size 358, which is longer than the specified 300\n",
+      "Created a chunk of size 315, which is longer than the specified 300\n",
+      "Created a chunk of size 305, which is longer than the specified 300\n",
+      "Created a chunk of size 366, which is longer than the specified 300\n",
+      "Created a chunk of size 330, which is longer than the specified 300\n",
+      "Created a chunk of size 351, which is longer than the specified 300\n",
+      "Created a chunk of size 378, which is longer than the specified 300\n",
+      "Created a chunk of size 361, which is longer than the specified 300\n",
+      "Created a chunk of size 350, which is longer than the specified 300\n",
+      "Created a chunk of size 362, which is longer than the specified 300\n",
+      "Created a chunk of size 335, which is longer than the specified 300\n",
+      "Created a chunk of size 353, which is longer than the specified 300\n",
+      "Created a chunk of size 358, which is longer than the specified 300\n",
+      "Created a chunk of size 336, which is longer than the specified 300\n",
+      "Created a chunk of size 324, which is longer than the specified 300\n",
+      "Created a chunk of size 337, which is longer than the specified 300\n",
+      "Created a chunk of size 307, which is longer than the specified 300\n",
+      "Created a chunk of size 361, which is longer than the specified 300\n",
+      "Created a chunk of size 354, which is longer than the specified 300\n",
+      "Created a chunk of size 378, which is longer than the specified 300\n",
+      "Created a chunk of size 381, which is longer than the specified 300\n",
+      "Created a chunk of size 365, which is longer than the specified 300\n",
+      "Created a chunk of size 377, which is longer than the specified 300\n",
+      "Created a chunk of size 329, which is longer than the specified 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_text_splitters import CharacterTextSplitter\n",
+    "\n",
+    "text_splitter = CharacterTextSplitter.from_huggingface_tokenizer(\n",
+    "    hf_tokenizer,\n",
+    "    chunk_size = 300,\n",
+    "    chunk_overlap=50\n",
+    ")\n",
+    "\n",
+    "texts = text_splitter.split_text(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정의: 의미론적 검색은 사용자의 질의를 단순한 키워드 매칭을 넘어서 그 의미를 파악하여 관련된 결과를 반환하는 검색 방식입니다.\n",
+      "예시: 사용자가 \"태양계 행성\"이라고 검색하면, \"목성\", \"화성\" 등과 같이 관련된 행성에 대한 정보를 반환합니다.\n",
+      "연관키워드: 자연어 처리, 검색 알고리즘, 데이터 마이닝\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(texts[0])"
+   ]
   }
  ],
  "metadata": {
